k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: account-service
  labels:
    app.kubernetes.io/part-of: fintech
    environment: dev
