k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-account-service
  namespace: account-service
  labels:
    app.kubernetes.io/name: ms-account-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: ms-account-service
